[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/MARYJ___.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/MainMenu/button.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/MainMenu/button_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/MainMenu/button_press.tres" type="StyleBox" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -671.0
margin_top = -79.0
margin_right = -351.0
margin_bottom = 256.0
custom_constants/separation = 32

[node name="StartGameStoryButton" type="Button" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 90.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "Start"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 320.0
margin_bottom = 212.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "Credits"

[node name="ExitGameButton" type="Button" parent="VBoxContainer"]
margin_top = 244.0
margin_right = 320.0
margin_bottom = 335.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "Exit"

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -905.0
margin_top = -447.0
margin_right = -50.0
margin_bottom = -309.0
size_flags_horizontal = 9
custom_fonts/font = ExtResource( 3 )
text = "The Darkest Hour"
align = 1

[connection signal="pressed" from="VBoxContainer/StartGameStoryButton" to="." method="_on_StartGameStoryButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
